update the .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,9 @@ cython_debug/
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+
+# poetry files extension
+.lock
+
+# jupyter notebook files extension
+.ipynb_checkpoints
