update the .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -159,7 +159,7 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 # poetry files extension
-.lock
+poetry.lock
 
 # jupyter notebook files extension
 .ipynb_checkpoints
